--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,1 +1,43 @@
-# Test
+# This is a basic workflow to help you get started with Actions
+name: CI
+# Controls when the workflow will run
+on:
+  # Triggers the workflow on push or pull request events but only for the main branch
+  push:
+    branches: [ lab ]
+  pull_request:
+    branches: [ lab ]
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+jobs:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
+    runs-on: self-hosted
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v2
+      - name: check path 
+        run: |
+             ls -lta
+      - name: build img
+        run: |
+              cd Nodejs/github-action/
+              sudo docker build -t myapp:1.0.0 . 
+      - name: deploy  
+        run: |
+             if [ ! -z "$(docker ps | grep myapp)" ];then
+              docker stop myapp
+              docker rm myapp
+              docker run -d --name myapp -p 8080:3000 myapp:1.0.0
+             else
+              docker run -d --name myapp -p 8080:3000 myapp:1.0.0
+              fi
+  deploy:
+    needs: build
+    runs-on: self-hosted
+    steps:
+      - name: test
+        run: curl 127.0.0.1:8080
