--- a/.github/workflows/jboss.yaml
+++ b/.github/workflows/jboss.yaml
@@ -30,6 +30,16 @@ jobs:
 #              sudo docker build -f Dockerfile-BE --no-cache -t jboss/wildfly:24.0.0.Final-BE .
 #              cd ../
 
+      - name: deploy be1
+        run: |
+             if [ ! -z "$(docker ps | grep jboss-be1)" ];then
+              sudo docker stop jboss-be1
+              sudo docker rm jboss-be1
+              sudo docker run -d --network my-net --name jboss-be1 -p 30180:8080 jboss/wildfly:24.0.0.Final-BE
+             else
+              sudo docker run -d --network my-net --name jboss-be1 -p 30180:8080 jboss/wildfly:24.0.0.Final-BE
+             fi
+
 #      - name: deploy fe
 #        run: |
 #             if [ ! -z "$(docker ps | grep jboss-fe)" ];then
@@ -40,19 +50,14 @@ jobs:
 #              sudo docker run -d --network my-net --name jboss-fe -p 30080:8080 jboss/wildfly:8.1.0.Final-FE
 #             fi
 
-      - name: deploy be1
-        run: |
-             if [ ! -z "$(docker ps | grep jboss-be1)" ];then
-              sudo docker stop jboss-be1
-              sudo docker rm jboss-be1
-              sudo docker run -d --network my-net --name jboss-be1 -p 30180:8080 jboss/wildfly:24.0.0.Final-BE
-             else
-              sudo docker run -d --network my-net --name jboss-be1 -p 30180:8080 jboss/wildfly:24.0.0.Final-BE
-             fi
   deploy:
     needs: build
     runs-on: self-hosted
     steps:
+#      - name: test-be1
+#        run: curl 127.0.0.1:30180
       - name: test-be1
-        run: curl 127.0.0.1:30180
+        run: |
+             curl 127.0.0.1:30180
+             sudo docker stop jboss-be1 && sudo docker rm jboss-be1
 
